add start of BitcoinSync and AccountHold structures in database

--- a/Bitcoin/BitcoinRpcClient/RpcClient.csproj
+++ b/Bitcoin/BitcoinRpcClient/RpcClient.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRpcClient.cs" />
     <Compile Include="RpcClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
