--- a/Bitcoin/BitcoinSync/app.config
+++ b/Bitcoin/BitcoinSync/app.config
@@ -1,3 +1,43 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <configSections>
+    <section name="log4net"
+       type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Olive.Bitcoin.BitcoinSync.BitcoinSync" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="Header" value="[Header]\r\n" />
+        <param name="Footer" value="[Footer]\r\n" />
+        <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
+      </layout>
+    </appender>
+
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+  </log4net>
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+
+
+  <applicationSettings>
+    <Olive.Bitcoin.BitcoinSync.BitcoinSync>
+      <setting name="BitcoinDaemonHostname" serializeAs="String">
+        <value>oapp1.olive.local</value>
+      </setting>
+      <setting name="BitconDaemonPort" serializeAs="String">
+        <value>8502</value>
+      </setting>
+      <setting name="BitcoinDaemonUsername" serializeAs="String">
+        <value>user</value>
+      </setting>
+      <setting name="BitcoinDaemonPassword" serializeAs="String">
+        <value>password</value>
+      </setting>
+    </Olive.Bitcoin.BitcoinSync.BitcoinSync>
+  </applicationSettings>
+</configuration>
