--- a/Services/Web.config
+++ b/Services/Web.config
@@ -1,28 +1,84 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <configuration>
-	<connectionStrings>
-		<add name="OliveConnectionString" connectionString="server=.\SQLEXPRESS;database=OliveTest;Trusted_Connection=yes;" />
-	</connectionStrings>
+  <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
+  </configSections>
 
-	<system.web>
-		<compilation debug="true" targetFramework="4.0" />
-	</system.web>
-	<system.serviceModel>
-		<behaviors>
-			<serviceBehaviors>
-				<behavior>
-					<!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
-					<serviceMetadata httpGetEnabled="true" />
-					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-					<serviceDebug includeExceptionDetailInFaults="false" />
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
-		<serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
-	</system.serviceModel>
-	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true" />
-	</system.webServer>
+  <connectionStrings>
+    <add name="Olive" 
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <!-- Lifetime manager types -->
+    <alias alias="singleton" type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager, Microsoft.Practices.Unity" />
+    <alias alias="ICrypto" type="Olive.ICrypto, Olive.Core" />
+    <alias alias="Crypto" type="Olive.Crypto, Olive.Core" />
+
+    <!-- User-defined type aliases -->
+    <alias alias="IOliveContext" type="Olive.DataAccess.IOliveContext, Olive.DataAccess" />
+    <alias alias="OliveContext" type="Olive.DataAccess.OliveContext, Olive.DataAccess" />
+
+    <container>
+      <register type="IOliveContext" mapTo="OliveContext" />
+      <register type="ICrypto" mapTo="Crypto">
+        <lifetime type="singleton" />
+      </register>
+    </container>
+  </unity>
+  
+  <system.web>
+    <compilation debug="true" targetFramework="4.0" />
+    <customErrors mode="Off" />
+  </system.web>
+  
+  <system.serviceModel>
+    <services>
+      <service
+        name="Olive.Services.ClientService"
+        behaviorConfiguration="Olive.Services.ClientServiceBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="basicHttpBinding" contract="Olive.Services.IClientService" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="Olive.Services.ClientServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
+  
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="ClientService.svc" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
+
+  <system.diagnostics>
+    <trace autoflush="true" />
+    <sources>
+      <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing"
+              propagateActivity="true">
+        <listeners>
+          <add name="sdt"
+              type="System.Diagnostics.XmlWriterTraceListener"
+              initializeData="c:\temp\OliveServiceDevLog.e2e" />
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
 </configuration>
