--- a/Website/Web.config
+++ b/Website/Web.config
@@ -6,10 +6,38 @@
   -->
 
 <configuration>
-  <connectionStrings>
-    <add name="OliveConnectionString" connectionString="server=.\SQLEXPRESS;user=ServiceUser;password=temp;database=OliveTest;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
+  </configSections>
 
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <!-- Lifetime manager types -->
+    <alias alias="singleton"
+         type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager,
+               Microsoft.Practices.Unity" />
+
+    <!-- User-defined type aliases -->
+    <!--<typeAlias alias="IClientService" type="Olive.Services.IClientService" />-->
+    <alias alias="ISiteSession" type="Olive.Website.Helpers.ISiteSession, Olive.Website" />
+    <alias alias="ICrypto" type="Olive.ICrypto, Olive.Core" />
+    <alias alias="Crypto" type="Olive.Crypto, Olive.Core" />
+    <alias alias="ICurrencyCache" type="Olive.Website.Helpers.ICurrencyCache, Olive.Website" />
+    <alias alias="SiteSession" type="Olive.Website.Helpers.SiteSession, Olive.Website" />
+    <alias alias="CurrencyCache" type="Olive.Website.Helpers.CurrencyCache, Olive.Website" />
+
+    <container>
+      <register type="ISiteSession" mapTo="SiteSession">
+        <lifetime type="singleton" />
+      </register>
+      <register type="ICrypto" mapTo="Crypto">
+        <lifetime type="singleton" />
+      </register>
+      <register type="ICurrencyCache" mapTo="CurrencyCache">
+        <lifetime type="singleton" />
+      </register>
+    </container>
+  </unity>
+  
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="false" />
@@ -59,4 +87,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings />
+    <client>
+      <endpoint address="http://localhost:9001/ClientService.svc"
+       binding="basicHttpBinding" contract="Olive.Services.IClientService" name="" />
+    </client>
+  </system.serviceModel>
 </configuration>
