--- a/Services/Web.config
+++ b/Services/Web.config
@@ -6,24 +6,34 @@
   </configSections>
 
   <connectionStrings>
-    <add name="Olive" 
-         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;Integrated Security=True" 
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <!--
+    <add name="Olive"
+             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;Integrated Security=True"
+             providerName="System.Data.SqlClient" />
+    -->
+             <add name="Olive"
+                      connectionString="Data Source=osql1.olive.local;Initial Catalog=Olive;Integrated Security=True"
+                      providerName="System.Data.SqlClient" />
+           </connectionStrings>
 
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <!-- Lifetime manager types -->
     <alias alias="singleton" type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager, Microsoft.Practices.Unity" />
-    <alias alias="ICrypto" type="Olive.ICrypto, Olive.Core" />
-    <alias alias="Crypto" type="Olive.Crypto, Olive.Core" />
 
     <!-- User-defined type aliases -->
     <alias alias="IOliveContext" type="Olive.DataAccess.IOliveContext, Olive.DataAccess" />
     <alias alias="OliveContext" type="Olive.DataAccess.OliveContext, Olive.DataAccess" />
+    <alias alias="ICrypto" type="Olive.ICrypto, Olive.Core" />
+    <alias alias="Crypto" type="Olive.Crypto, Olive.Core" />
+    <alias alias="IFaultFactory" type="Olive.Services.IFaultFactory, Olive.Services" />
+    <alias alias="FaultFactory" type="Olive.Services.FaultFactory, Olive.Services" />
 
     <container>
       <register type="IOliveContext" mapTo="OliveContext" />
       <register type="ICrypto" mapTo="Crypto">
+        <lifetime type="singleton" />
+      </register>
+      <register type="IFaultFactory" mapTo="FaultFactory">
         <lifetime type="singleton" />
       </register>
     </container>
