--- a/Website/Web.config
+++ b/Website/Web.config
@@ -37,7 +37,7 @@
       </register>
     </container>
   </unity>
-  
+
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="false" />
@@ -90,7 +90,11 @@
   <system.serviceModel>
     <bindings />
     <client>
-      <endpoint address="http://localhost:9001/ClientService.svc"
+      <!--
+      <endpoint address="http://oapp1.olive.local/"
+       binding="basicHttpBinding" contract="Olive.Services.IClientService" name="" />
+      -->
+       <endpoint address="http://localhost:9001/ClientService.svc"
        binding="basicHttpBinding" contract="Olive.Services.IClientService" name="" />
     </client>
   </system.serviceModel>
