--- a/Bitcoin/BitcoinSync/Properties/BitcoinSyncSettings.settings
+++ b/Bitcoin/BitcoinSync/Properties/BitcoinSyncSettings.settings
@@ -1,9 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Olive.Bitcoin.BitcoinSync" GeneratedClassName="BitcoinSync">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Olive.Bitcoin.BitcoinSync.Properties" GeneratedClassName="BitcoinSyncSettings">
   <Profiles />
   <Settings>
     <Setting Name="BitcoinDaemonHostname" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">oapp1.olive.local</Value>
+      <Value Profile="(Default)">127.0.0.1</Value>
     </Setting>
     <Setting Name="BitconDaemonPort" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">8502</Value>
@@ -13,6 +13,9 @@
     </Setting>
     <Setting Name="BitcoinDaemonPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)">password</Value>
+    </Setting>
+    <Setting Name="Currency" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">EXU</Value>
     </Setting>
   </Settings>
 </SettingsFile>
