--- a/Bitcoin/BitcoinSync/app.config
+++ b/Bitcoin/BitcoinSync/app.config
@@ -1,33 +1,56 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="log4net"
-       type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Olive.Bitcoin.BitcoinSync.Properties.BitcoinSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="Olive.Bitcoin.BitcoinSync.BitcoinSync" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
   </configSections>
-  <log4net>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
+  
+  <connectionStrings>
+    <add name="Olive" connectionString="Data Source=osql1.olive.local;Initial Catalog=Olive;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
+<log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
         <param name="Header" value="[Header]\r\n" />
         <param name="Footer" value="[Footer]\r\n" />
         <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
       </layout>
     </appender>
-
     <root>
-      <level value="INFO" />
+      <level value="DEBUG" />
       <appender-ref ref="ConsoleAppender" />
     </root>
   </log4net>
-  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
-
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
 
   <applicationSettings>
+    <Olive.Bitcoin.BitcoinSync.Properties.BitcoinSyncSettings>
+      <setting name="BitcoinDaemonHostname" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="BitconDaemonPort" serializeAs="String">
+        <value>8502</value>
+      </setting>
+      <setting name="BitcoinDaemonUsername" serializeAs="String">
+        <value>user</value>
+      </setting>
+      <setting name="BitcoinDaemonPassword" serializeAs="String">
+        <value>password</value>
+      </setting>
+      <setting name="Currency" serializeAs="String">
+        <value>EXU</value>
+      </setting>
+    </Olive.Bitcoin.BitcoinSync.Properties.BitcoinSyncSettings>
     <Olive.Bitcoin.BitcoinSync.BitcoinSync>
       <setting name="BitcoinDaemonHostname" serializeAs="String">
-        <value>oapp1.olive.local</value>
+        <value>localhost</value>
       </setting>
       <setting name="BitconDaemonPort" serializeAs="String">
         <value>8502</value>
@@ -40,4 +63,23 @@
       </setting>
     </Olive.Bitcoin.BitcoinSync.BitcoinSync>
   </applicationSettings>
+
+  <system.serviceModel>
+    <bindings />
+    <client>
+      <endpoint address="http://oapp1.olive.local/"
+       binding="basicHttpBinding" contract="Olive.Services.IClientService" name="OliveService" />
+
+      <!--
+       <endpoint address="http://localhost:9001/ClientService.svc"
+       binding="basicHttpBinding" contract="Olive.Services.IClientService" name="" />
+      -->
+    </client>
+  </system.serviceModel>
+
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <alias alias="singleton" type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager, Microsoft.Practices.Unity" />
+
+    <container></container>
+  </unity>
 </configuration>
