bypass proxy, use local sql server for "Dev" configuration

--- a/Website/Web.config
+++ b/Website/Web.config
@@ -10,6 +10,12 @@
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
   </configSections>
 
+  <connectionStrings>
+    <add name="OliveLocal"
+             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;Integrated Security=True"
+             providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <!-- Lifetime manager types -->
     <alias alias="singleton"
