add local connection string for BitcoinSync

--- a/Bitcoin/BitcoinSync/app.config
+++ b/Bitcoin/BitcoinSync/app.config
@@ -11,6 +11,7 @@
   
   <connectionStrings>
     <add name="Olive" connectionString="Data Source=osql1.olive.local;Initial Catalog=Olive;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="OliveLocal" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
 <log4net>
